[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aiomusiccast"
dynamic = ["version"]
description = "Companion library for musiccast devices intended for the Home Assistant integration."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Tom Schneider", email = "mail@vigonotion.com" }]
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://pypi.org/project/aiomusiccast"
Documentation = "https://aiomusiccast.readthedocs.io"
Repository = "https://github.com/vigonotion/aiomusiccast"

[tool.hatch.version]
path = "aiomusiccast/__init__.py"

[dependency-groups]
dev = [
    "docformatter[tomli]>=1.7.7",
    "ipython>=8.24.0",
    "mkdocs>=1.5.3",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
    "pygments>=2.15.0",
    "ruff>=0.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "pygments>=2.15.0",
]

[tool.docformatter]
wrap-descriptions = 72
wrap-summaries = 72
pre-summary-newline = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = [
    "ARG",
    "B",
    "C4",
    "D",
    "DTZ",
    "ERA",
    "FA",
    "FIX",
    "FURB",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "PIE",
    "PL",
    "PT",
    "RET",
    "RUF",
    "SIM",
    "T1",
    "UP",
    "YTT",
]
ignore = [
    "D1",
    "D201",
    "D202",
    "D203",
    "D204",
    "D211",
    "D213",
    "E501",
    "PLC0414",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",
    "PLR2004",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.isort]
combine-as-imports = true
